Fix dropdown icon wrap issue on the checklist edit-mode page

--- a/sass/blocks/_boss-board.sass
+++ b/sass/blocks/_boss-board.sass
@@ -119,6 +119,9 @@ $block: ".boss-board"
         text-align: center
         margin-bottom: 15px
 
+      #{$block}_state_edit-mode &
+        width: calc(100% - 50px)
+
     @media screen and (max-width: 400px)
       font-size: 20px
 
@@ -385,6 +388,10 @@ $block: ".boss-board"
     cursor: pointer
     outline: none
     transition: .4s
+
+    @media screen and (max-width: 640px)
+      #{$block}_state_edit-mode &
+        margin-left: 0
 
     &:before
       content: ""
